# arithmet-rs

./: .gitignore  Cargo.toml  README.md  arithmet.toml
.github/workflows/: release.yml
docs/: MIGRATION_PLAN.md  ROADMAP.md  RUST_GUIDE.md
src/: app.rs  lib.rs  main.rs
src/domain/: answer.rs  exercise.rs  expression.rs  grade.rs  mod.rs  operation.rs  session.rs  settings.rs
src/domain/banner/: cyrillic.rs  latin.rs  mod.rs  symbols.rs
src/domain/expression/: comparison.rs  exercise.rs  expression.rs  fake_exercise.rs  mod.rs
src/tui_widgets/: app.rs  mod.rs  results.rs
src/tui_widgets/main/: cursor.rs  field_line.rs  main.rs  mod.rs  operation_item.rs
src/tui_widgets/status/: banner.rs  mod.rs  progress.rs  status.rs
tests/: session_flow.rs
