[package]
name = "arithmet"
version = "0.1.0"
edition = "2024"

[dependencies]
deunicode = "1.6.2"
humantime-serde = "1.1.1"
rand = "0.10.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.3.18"
time = "0.3.47"
toml = "1.1.2"
validations = "0.1.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
strum = "0.28.0"
strum_macros = "0.28.0"
